quick fix to remove gap from payment section

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -57,6 +57,7 @@ fieldset.checkboxes {
   background: $light-grey;
   border-radius: $large-radius;
   margin: 0;
+  gap: 0;
 }
 
 .checkboxes label {
